--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-speech-recognition": "^3.9.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
