--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.11.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-speech-recognition": "^3.10.0",
+    "react-webcam": "^7.2.0",
     "regenerator-runtime": "^0.14.1",
     "swr": "^2.2.5"
   },
